--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg">
                   <a class="navbar-brand" href="index.html">
-                    <img src="quadcom-team.github.io/assets/img/logo/pp.jpg" alt="Logo" />
+                    <img src="quadcom-team/quadcom-team.github.io/assets/img/logo/pp.jpg" alt="Logo" />
                   </a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent2" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="toggler-icon"></span>
