--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <a class="page-scroll active" href="#home">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Service</a>
                       </li>
                       <li class="nav-item">
                         <a class="page-scroll" href="#about">About</a>
