--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <a class="page-scroll active" href="#home">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="page-scroll" href="#services">Service</a>
+                        <a class="page-scroll" href="#services">services</a>
                       </li>
                       <li class="nav-item">
                         <a class="page-scroll" href="#about">About</a>
@@ -100,9 +100,9 @@
           <div class="row align-items-end">
             <div class="col-lg-6">
               <div class="hero-content-wrapper">
-                <h4 class="wow fadeInUp" data-wow-delay=".2s">You're Using</h4>
-                <h2 class="mb-30 wow fadeInUp" data-wow-delay=".4s">Free Lite Version of Template</h2>
-                <p class="mb-50 wow fadeInUp" data-wow-delay=".6s">Please, purchase full version of the template to get all sections, features and permission to remove footer credit</p>
+                <h4 class="wow fadeInUp" data-wow-delay=".2s">We are here to help</h4>
+                <h2 class="mb-30 wow fadeInUp" data-wow-delay=".4s">Upgrade your business today</h2>
+                <p class="mb-50 wow fadeInUp" data-wow-delay=".6s">Get tailored plans for your business needs, be it a website, app, system, surveillance systems and much more.</p>
                 <div class="buttons">
                   <a href="https://rebrand.ly/flat-ud/" rel="nofollow" target="blank" class="button button-lg radius-10 wow fadeInUp" data-wow-delay=".7s">Purchase Now</a>
                 </div>
